# eclipse_agent

./: .gitignore  README.md  docker-compose.yml  nginx.conf
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  config.py  main.py  models.py
backend/app/api/: routes.py
backend/app/services/: __init__.py  openai_service.py  prompt_service.py
backend/tests/: test_api.py
docs/: PLAN.md
frontend/: css_example.html  index.html
frontend/css/: style.css
frontend/js/: api.js  app.js  storage.js
