[project]
name = "backend"
version = "0.1.0"
description = "Secret Word Challenge - AI game backend"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.124.0",
    "openai>=2.9.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.27.0",
]
